[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://asset/Sprites/Player/dog.png" type="Texture" id=2]
[ext_resource path="res://asset/Sprites/Player/dog2.png" type="Texture" id=3]
[ext_resource path="res://asset/Sprites/Player/dog4.png" type="Texture" id=4]
[ext_resource path="res://asset/Sprites/Player/dog1.png" type="Texture" id=5]
[ext_resource path="res://asset/Sprites/Player/dog5.png" type="Texture" id=6]
[ext_resource path="res://asset/Audio/do.wav" type="AudioStream" id=7]
[ext_resource path="res://asset/Audio/re.wav" type="AudioStream" id=8]
[ext_resource path="res://asset/Audio/mi.wav" type="AudioStream" id=9]
[ext_resource path="res://asset/Audio/fa.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49.8273, 33.8363 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50.1284, 4.01415 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="PlayerAnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.7818, 0 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.70168, 30.0338 )
shape = SubResource( 3 )

[node name="do" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="re" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="mi" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="fa" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]

[node name="resettab" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="resettab" to="." method="_on_resettab_timeout"]
